--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a>Resume</a> |
                 <a>Linkedin</a> |
                 <a> About Me </a>|
+                <a> My Work</a>
                 </nav> 
     </header>
   
@@ -37,12 +38,51 @@
           </ul>  
       </footer>
       
-
-
-
 </section>
 
+<section class="mySkills">
+    <h1>My UX Skills</h1>
+    <div class="flexContainer">
+        <div> 
+            <img> 
+            <h3></h3>
+            <p></p> 
+        </div>
+        <div> 
+            <img> 
+            <h3></h3>
+            <p></p> 
+        </div>
+        <div> 
+            <img> 
+            <h3></h3>
+            <p></p> 
+        </div>
+    </div>
+</section>
 
+<section class="myWork"> 
+    <h1>My Work</h1>
+    <div class="workGrid">
+        <div>
+            <img>
+        </div>
+        <div>
+            <h4></h4> 
+            <p></p>
+            <button></button>
+
+            <div>
+                <img>
+            </div>
+            <div>
+                <h4></h4> 
+                <p></p>
+                <button></button>
+        </div>
+        <h3>View all projects</h3>
+    </div>
+</section>
 
 
 </body>
