--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </footer>
       
 </section>
-
+<!--  My UX Skills section coded using CSS flex -->
 <section class="mySkills">
     <h1>My UX Skills</h1>
     <div class="flexContainer">
