--- a/index.html
+++ b/index.html
@@ -25,9 +25,61 @@
     <div class="content"> 
         <img src="Images/Yea.PNG">
         <p>Im a UX/Product designer, with a background in game design</p>
-        <button type="button" onclick="alert('Resume')">Download Resume</button>
+        <button class="resume" type="button" onclick="alert('Resume')">Download Resume</button>
     </div>
+</section>
+<!-- My Work Section Constructed using CSS Grid -->
 
+<section class="myWork"> 
+    <h1>My Work</h1>
+    <div class="workGrid">
+        <div>
+            <img src="Images/Homeland Security.jpg">
+        </div>
+        <div>
+            <h4>Homeland Security</h4> 
+            <p>A redesign of a government site focused on creating a pathway through the maze of endless information, while giving more useful and detailed information for the user</p>
+            <button>Read More</button>
+
+            <div>
+                <img src="Images/A Little Help.png" style="width: 30em;"  >
+            </div>
+            <div>
+                <h4> A Little Help</h4> 
+                <p> Helping a non-profit get a new chance on life through their site. By reworking the site it allows them to offer more services to those who need it, in the most streamlined way possible</p>
+                <button >Read More</button>
+        </div>
+
+        <div class="projectbutton">
+            <button  type="button" onclick="alert('View All Projects')"> View All Projects </button>
+        </div>
+    
+    </div>
+</section>
+
+<!--  My UX Skills section coded using CSS flex -->
+    <h1>My UX Skills</h1>
+    <div class="flexContainer">
+        <div> 
+            <img> 
+            <h3>Prototyping</h3>
+            <p>Finding the balance between functionality and aesthetic is one of the most satisfying parts of UX/UI. When you can find that balance it is the most satisfying feeling in the world. But, is also one of the most frustrating when something you worked on doesn’t turn out the way you want.</p> 
+        </div>
+        <div> 
+            <img> 
+            <h3>User Testing</h3>
+            <p>No matter how well you think something is working having someone who has never touched this product can really tell what is going right and what is going wrong. While also finding underlying problems that werent even considered in initial testing </p> 
+        </div>
+        <div> 
+            <img> 
+            <h3>Heuristics</h3>
+            <p>Creating a happy path is the ultimate goal for a designer. It is what makes or breaks a site. This is what makes websites truly stand out. They look nothing alike but when you take a closer look you find, identical layouts that allow for every type of user to use. This creates a challenge for a designer and is something I really enjoy solving </p> 
+        </div>
+    </div>
+</section>
+
+
+<section>
     <footer class="footer">
         <p class="p">Nick Caltrider</p>
         <a href="caltriderni@gmail.com" class="a">caltriderni@gmail.com</a></p>
@@ -36,54 +88,8 @@
             <li>Linkedin</li>
             <li>AboutMe</li>
           </ul>  
-      </footer>
-      
+      </footer> 
 </section>
-<!--  My UX Skills section coded using CSS flex -->
-<section class="mySkills">
-    <h1>My UX Skills</h1>
-    <div class="flexContainer">
-        <div> 
-            <img> 
-            <h3></h3>
-            <p></p> 
-        </div>
-        <div> 
-            <img> 
-            <h3></h3>
-            <p></p> 
-        </div>
-        <div> 
-            <img> 
-            <h3></h3>
-            <p></p> 
-        </div>
-    </div>
-</section>
-
-<section class="myWork"> 
-    <h1>My Work</h1>
-    <div class="workGrid">
-        <div>
-            <img>
-        </div>
-        <div>
-            <h4></h4> 
-            <p></p>
-            <button></button>
-
-            <div>
-                <img>
-            </div>
-            <div>
-                <h4></h4> 
-                <p></p>
-                <button></button>
-        </div>
-        <h3>View all projects</h3>
-    </div>
-</section>
-
 
 </body>
 </html>
