This is not easy why god oh why

--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
                  <img src="Images/Nick Caltrider - Smaller Version.png" style="width: 15em; height:15em;";">
              </div>
              <nav class ="inline-block">
-                <a>Resume</a> |
-                <a>Linkedin</a> |
-                <a> About Me </a>|
-                <a> My Work</a>
+                <a style="font-size: 25px;">Resume</a> |
+                <a style="font-size: 25px;">Linkedin</a> |
+                <a style="font-size: 25px;"> About Me </a>|
+                <a style="font-size: 25px;"> My Work</a>
                 </nav> 
     </header>
   
 <section class="heroImg"> 
     <div class="content"> 
         <img src="Images/Yea.PNG">
-        <p>Im a UX/Product designer, with a background in game design</p>
+        <p style="color: black;">Im a UX/Product designer, with a background in game design </p>
         <button class="resume" type="button" onclick="alert('Resume')">Download Resume</button>
     </div>
 </section>
 <!-- My Work Section Constructed using CSS Grid -->
 
 <section class="myWork"> 
-    <h1>My Work</h1>
+    <h1 style="font-size: 25px;">My Work</h1>
     <div class="workGrid">
         <div>
             <img src="Images/Homeland Security.jpg">
@@ -58,7 +58,7 @@
 </section>
 
 <!--  My UX Skills section coded using CSS flex -->
-    <h1>My UX Skills</h1>
+    <h1 style="font-size: 25px;">My UX Skills</h1>
     <div class="flexContainer">
         <div> 
             <img> 
