No idea what I doing

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 </section>
 <!-- My Work Section Constructed using CSS Grid -->
 
-<section class="myWork"> 
+<section class="myWork" id="workLayout"> 
     <h1 style="font-size: 25px;">My Work</h1>
     <div class="workGrid">
-        <div>
+        <div id="Picture1" class="categoryGridArea">
             <img src="Images/Homeland Security.jpg">
         </div>
         <div>
@@ -41,7 +41,7 @@
             <p>A redesign of a government site focused on creating a pathway through the maze of endless information, while giving more useful and detailed information for the user</p>
             <button>Read More</button>
 
-            <div>
+            <div id="Picture2" class="categoryGridArea">
                 <img src="Images/A Little Help.png" style="width: 30em;"  >
             </div>
             <div>
