--- a/index.html
+++ b/index.html
@@ -32,16 +32,20 @@
 
 <section class="myWork" id="workLayout"> 
     <h1 style="font-size: 25px;">My Work</h1>
-    <div class="workGrid">
-        <div id="Picture1" class="categoryGridArea">
+    <div class="grid-container">
+        <div class="workGrid">
+        <div id="Picture1" class="item1">
             <img src="Images/Homeland Security.jpg">
         </div>
-        <div>
+        <div id="Description" class="item2">
             <h4>Homeland Security</h4> 
             <p>A redesign of a government site focused on creating a pathway through the maze of endless information, while giving more useful and detailed information for the user</p>
             <button>Read More</button>
 
-            <div id="Picture2" class="categoryGridArea">
+        </div>
+
+            <div class="grid-container2"
+            <div id="Picture2" class="item">
                 <img src="Images/A Little Help.png" style="width: 30em;"  >
             </div>
             <div>
@@ -49,6 +53,7 @@
                 <p> Helping a non-profit get a new chance on life through their site. By reworking the site it allows them to offer more services to those who need it, in the most streamlined way possible</p>
                 <button >Read More</button>
         </div>
+    </div>
 
         <div class="projectbutton">
             <button  type="button" onclick="alert('View All Projects')"> View All Projects </button>
