--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="grid-container2">
-            <div class="workGrid"> 
+            <div class="workGrid2"> 
             <div id="Picture2" class="item">
                 <img src="Images/A Little Help.png" style="width: 30em;">
             </div>
