Final Change for Day

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- My Work Section Constructed using CSS Grid -->
 
     <section class="myWork" id="workLayout">
-        <h1 style="font-size: 25px;">My Work</h1>
+        <h1 class = "h1" style="font-size: 25px;">My Work</h1>
         <div class="grid-container">
             <div class="workGrid">
                 <div id="Picture1">
