--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
             </div>
         </div>
+         <!--  Changed myUXSkills section name to make it easier to find -->
         <div class="grid-container2">
             <div class="workGrid2"> 
             <div id="Picture2" class="item">
