--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             </div>
         </div>
-         <!--  Changed myUXSkills section name to make it easier to find -->
+         <!--  Changed/Combined myUXSkills section name to make it easier to find and undertand -->
         <div class="grid-container2">
             <div class="workGrid2"> 
             <div id="Picture2" class="item">
